        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12340
        XPathEvaluator behavior does not match Firefox - name() and attribute nodes

WebCore:
        * xml/XPathFunctions.cpp:
        (WebCore::XPath::FunName::doEvaluate): Do not try to append a prefix if it doesn't exist.

LayoutTests:
        * fast/xpath/name-null-namespace-expected.txt: Added.
        * fast/xpath/name-null-namespace.html: Added.
        Test for the bug.

        * fast/dom/xpath-empty-string-expected.txt: Removed.
        * fast/dom/xpath-empty-string.html: Removed.
        Moved these to fast/xpath.

        * fast/xpath/xpath-namespaces.html: Fixed an inline document to be well-formed, so the test now passes in Firefox.
        This is really a quirk of our DOMParser that the test passed in WebKit: on error, a descriptive message is appended to
        the partially parsed document, instead of replacing it.



Canonical link: https://commits.webkit.org/16177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19226 268f45cc-cd09-0410-ab3c-d52691b4dbfc